# sflux

./: LICENSE  README.md  setup.cfg
.github/workflows/: publish_to_pypi.yml
src/sflux/: __init__.py  client.py  measurement.py  utils.py
