[metadata]
name = sflux
version = 0.0.3
author = perrytec
author_email = hello@perry.sg
description = A simple python interface for InfluxDB2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/perrytec/sflux.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    influxdb_client
    ciso8601
[options.packages.find]
where = src
